--- a/styling/style.css
+++ b/styling/style.css
@@ -70,8 +70,10 @@ body {
 }
 
 .heading-wrapper .rhs label {
-  width: 38px;
-  height: 20px;
+  width: 54px;
+  height: 30px;
+  -webkit-transform: translateY(-12px);
+          transform: translateY(-12px);
   position: relative;
   display: block;
   background: #d0cfd3;
@@ -81,11 +83,11 @@ body {
 
 .heading-wrapper .rhs label:after {
   content: '';
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
   position: absolute;
-  top: 2px;
-  left: 2px;
+  top: 3px;
+  left: 3px;
   background-color: white;
   border-radius: 180px;
   -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
@@ -99,7 +101,7 @@ body {
 }
 
 .heading-wrapper .rhs input:checked + label:after {
-  left: 36px;
+  left: 51px;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
 }
@@ -112,25 +114,21 @@ body {
 }
 
 .heading-wrapper .rhs label:active:after {
-  width: 18px;
+  width: 32px;
 }
 
 .heading-wrapper .rhs label img {
   position: absolute;
   z-index: 100;
-  top: 5px;
-  left: 5px;
+  top: 8px;
+  left: 8px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .heading-wrapper .rhs label .dark img {
-  left: 23px;
-}
-
-.heading-wrapper .rhs label:active .light img {
-  z-index: 100 !important;
+  left: 32px;
 }
 
 .main-wrapper {
