adding theme switcher

--- a/styling/style.css
+++ b/styling/style.css
@@ -23,21 +23,28 @@
   font-weight: 400;
 }
 
+@font-face {
+  src: url(/resources/Inter/Inter-Medium.ttf);
+  font-family: inter;
+  font-weight: 600;
+}
+
 body {
-  background-color: #e2e1e6;
+  background-color: var(--a-b);
   -webkit-font-smoothing: antialiased;
   margin: 0;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  margin-left: 16vw;
-  margin-right: 16vw;
+  margin-left: 28vw;
+  margin-right: 28vw;
   margin-top: 2vh;
 }
 
 .heading-wrapper {
-  margin-top: 10vh;
+  margin-top: 6vh;
+  margin-bottom: 3vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,11 +54,11 @@ body {
 }
 
 .heading-wrapper .lhs {
-  width: 60%;
+  width: 72%;
 }
 
 .heading-wrapper .lhs .heading {
-  color: black;
+  color: var(--f-h);
   font-family: serif-pro;
   font-size: 40px;
   font-weight: 600;
@@ -61,11 +68,11 @@ body {
 
 .heading-wrapper .lhs .subheading {
   margin-top: 8px;
-  color: black;
-  font-size: 14px;
+  color: var(--f-l);
+  font-size: 12px;
   font-family: inter;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 20px;
   letter-spacing: -0.3px;
 }
 
@@ -76,7 +83,7 @@ body {
           transform: translateY(-12px);
   position: relative;
   display: block;
-  background: #d0cfd3;
+  background: var(--t-b);
   border-radius: 20px;
   cursor: pointer;
 }
@@ -88,7 +95,7 @@ body {
   position: absolute;
   top: 3px;
   left: 3px;
-  background-color: white;
+  background-color: var(--t-f);
   border-radius: 180px;
   -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
@@ -132,14 +139,25 @@ body {
 }
 
 .main-wrapper {
-  margin-top: 4vh;
-  padding: 40px 20px;
-  border-radius: 20px;
-  color: #312416;
-  background-color: #ececef;
-  font-size: 18px;
+  margin-top: 3vh;
+  margin-bottom: 6vh;
+}
+
+.main-wrapper .content {
+  color: var(--f-m);
+  font-size: 14px;
   font-family: inter;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 22px;
+  letter-spacing: -0.3px;
+  margin-bottom: 20px;
+}
+
+.divider {
+  width: auto;
+  height: 1px;
+  background: var(--t-b);
+  border-radius: 4px;
+  opacity: 0.4;
 }
 /*# sourceMappingURL=style.css.map */
