--- a/styling/theme.css
+++ b/styling/theme.css
@@ -22,4 +22,10 @@
   font-family: inter;
   font-weight: 400;
 }
+
+@font-face {
+  src: url(/resources/Inter/Inter-Medium.ttf);
+  font-family: inter;
+  font-weight: 600;
+}
 /*# sourceMappingURL=theme.css.map */
