--- a/styling/theme.css
+++ b/styling/theme.css
@@ -3,29 +3,24 @@
   font-family: serif-pro;
   font-weight: 400;
 }
-
 @font-face {
   src: url(/resources/Source_Serif_Pro/SourceSerifPro-SemiBold.ttf);
   font-family: serif-pro;
   font-weight: 600;
 }
-
 @font-face {
   src: url(/resources/Source_Serif_Pro/SourceSerifPro-SemiBoldItalic.ttf);
   font-family: serif-pro;
   font-weight: 600;
   font-style: italic;
 }
-
 @font-face {
   src: url(/resources/Inter/Inter-Regular.ttf);
   font-family: inter;
   font-weight: 400;
 }
-
 @font-face {
   src: url(/resources/Inter/Inter-Medium.ttf);
   font-family: inter;
   font-weight: 600;
-}
-/*# sourceMappingURL=theme.css.map */
+}/*# sourceMappingURL=theme.css.map */
