--- a/styling/style.css
+++ b/styling/style.css
@@ -178,10 +178,10 @@ body ::selection {
 
 .content-wrapper {
   margin-top: 4vh;
-  margin-bottom: 8vh;
+  margin-bottom: 4vh;
 }
 .content-wrapper .content {
-  margin-bottom: 60px;
+  margin-bottom: 52px;
 }
 .content-wrapper .content .heading {
   color: var(--f-m);
@@ -229,6 +229,7 @@ body ::selection {
   letter-spacing: -0.3px;
   opacity: 0.5;
   margin-bottom: 4vh;
+  margin-top: 8vh;
 }
 .footer a {
   text-decoration: none;
