--- a/styling/style.scss
+++ b/styling/style.scss
@@ -115,9 +115,9 @@ body {
 
 .content-wrapper {
 	margin-top: 4vh;
-	margin-bottom: 8vh;
+	margin-bottom: 4vh;
 	.content {
-		margin-bottom: 60px;
+		margin-bottom: 52px;
 
 		.heading {
 			@include heading;
@@ -150,6 +150,7 @@ body {
 	@include body-2;
 	opacity: 0.5;
 	margin-bottom: 4vh;
+	margin-top: 8vh;
 
 	a {
 		text-decoration: none;
